--- a/src/client/assert/CSS/categoriesPageStyles.css
+++ b/src/client/assert/CSS/categoriesPageStyles.css
@@ -122,7 +122,7 @@ a:hover {
 
     background-color: #fff;
     border: 1px solid rgb(201, 201, 201);
-    padding: 20px 50px;
+    padding: 20px 30px;
 }
 
 .card .card-content .info{
@@ -270,6 +270,13 @@ a:hover {
 .product-sidebar ul li:hover{
     color: red;
 }
+
+/**/
+
+
+
+
+/**/
 
 /*footer start*/
 footer{
