--- a/src/client/assert/CSS/userPageStyles.css
+++ b/src/client/assert/CSS/userPageStyles.css
@@ -12,6 +12,9 @@ body{
     font-family: 'Inter', sans-serif;;
 }
 
+a:hover {
+    color: red;
+}
 
 
 .navbar{
@@ -94,26 +97,16 @@ body{
 }
 
 /**/
-.breadcrumb > li + li:before{
-    content: '\f105';
-    font-size: 12px;
-    font-family: "FontAwesome";
-    color: #999;
-}
-
-/**/
-
-.bxs-trash:hover{
-    color: red;
-}
-
 td 
 {
     text-align: center; 
     vertical-align: middle;
-  
 }
 
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
 
 
 /*footer start*/
@@ -169,4 +162,6 @@ footer div .icon-lists{
     padding-right: 30px;
 }
 
-/**/
+
+
+/*footer end*/
